apps/whoami/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 1
  selector: { matchLabels: { app: whoami } }
  template:
    metadata: { labels: { app: whoami } }
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:v1.10.3
        ports:
        - containerPort: 80
