apps/whoami/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  selector: { app: whoami }
  ports:
  - port: 80
    targetPort: 80
